--- a/petlove/pubspec.yaml
+++ b/petlove/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.10
   google_sign_in: ^5.2.4
+  image_picker: ^0.8.3
   
 
   font_awesome_flutter: ^9.2.0
