--- a/petlove/pubspec.yaml
+++ b/petlove/pubspec.yaml
@@ -27,39 +27,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^3.1.10
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.10
+  firebase_core: ^1.13.1
+  firebase_database: ^9.0.8
+  firebase_storage: ^10.2.9
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_core: ^1.13.1
-  firebase_auth: ^3.3.10
+  font_awesome_flutter: ^9.2.0
   google_sign_in: ^5.2.4
   image_picker: ^0.8.3
-  
-
-  font_awesome_flutter: ^9.2.0
   provider: ^5.0.0
 
 dev_dependencies:
+  flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^1.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
-  
-
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -74,13 +61,10 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/
-  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
