--- a/petlove/pubspec.yaml
+++ b/petlove/pubspec.yaml
@@ -38,12 +38,16 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   google_sign_in: ^5.2.4
   image_picker: ^0.8.3
-  provider: ^5.0.0
+  provider: ^5.0.0 
+  convex_bottom_bar: ^3.0.0
+  fluttertoast: ^8.0.9
+
 
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
