--- a/petlove/android/app/build.gradle
+++ b/petlove/android/app/build.gradle
@@ -66,5 +66,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:29.3.1')
 }
 apply plugin: 'com.google.gms.google-services'
