--- a/petlove/pubspec.yaml
+++ b/petlove/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   permission_handler: ^9.2.0
   geolocator: ^8.2.0
   google_maps_flutter: ^2.1.3
+  geoflutterfire: ^3.0.3
 
 
 dev_dependencies:
