--- a/petlove/pubspec.yaml
+++ b/petlove/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geolocator: ^8.2.0
   google_maps_flutter: ^2.1.3
   geoflutterfire: ^3.0.3
+  cached_network_image: ^3.2.0
 
 
 dev_dependencies:
