--- a/petlove/pubspec.yaml
+++ b/petlove/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   provider: ^5.0.0 
   convex_bottom_bar: ^3.0.0
   fluttertoast: ^8.0.9
+    # pick file
+  file_picker: ^3.0.1
+  cached_network_image: ^3.2.0
 
 
 dev_dependencies:
